# aws-gromacs

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint  CLAUDE.md  CONTRIBUTING.md  GAPS.md  PLAN-cost-per-result.md  PLAN.md  README.md  THESIS.md  cell_runner.sh  matrix.yaml  mdrun_wrapper.sh  parse_log.py  providers.py  pyproject.toml  reconstruct_from_s3.py  run_matrix.py  spore.py
.github/workflows/: lint.yml
docs/: divergence.md  findings.md  gromacs-delivery.md
preprocess/: build_medium.sh  build_medium_charmmgui.sh  sysinfo.sh
preprocess/mdp/: em.mdp  md-hmr.mdp  md.mdp  npt.mdp  nvt.mdp
